--- a/src/app/components/top-bar/top-bar.component.html
+++ b/src/app/components/top-bar/top-bar.component.html
@@ -1,13 +1,9 @@
 <nav class="navbar">
-    <li class="navbar-item">
-        <a>Home</a>
+    <li name="title">
+        <a class="navbar-item">Home</a>
     </li>
-    <div>
-        <li class="navbar-item">
-            <a>Home</a>
-        </li>
-        <li class="navbar-item">
-            <a>Home</a>
-        </li>
+    <div class="navbar-right">
+        <li><a class="navbar-item">Conectar</a></li>
+        <li><a class="navbar-item">Registrar</a></li>
     </div>
 </nav>
