--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,26 @@
 /* You can add global styles to this file, and also import other style files */
 
+body {
+    width: 100%;
+    height: 100vh;
+}
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 a {
     text-decoration: none;
+    cursor: pointer;
+}
+
+button {
+    cursor: pointer
+}
+
+li {
+    list-style: none;
 }
