add guard and integration with routers of backend

--- a/src/app/components/top-bar/top-bar.component.html
+++ b/src/app/components/top-bar/top-bar.component.html
@@ -1,9 +1,9 @@
 <nav class="navbar">
     <li name="title">
-        <a class="navbar-item">Home</a>
+        <a class="navbar-item" routerLink="" >Home</a>
     </li>
     <div class="navbar-right">
-        <li><a class="navbar-item">Conectar </a></li>
-        <li><a class="navbar-item">Registrar</a></li>
+        <li><a class="navbar-item" routerLink="auth" >Conectar </a></li>
+        <li><a class="navbar-item" routerLink="register" >Registrar</a></li>
     </div>
 </nav>
