dashboard feature implments

--- a/src/app/pages/master-dash/master-dash.component.html
+++ b/src/app/pages/master-dash/master-dash.component.html
@@ -1,2 +1,5 @@
 <app-top-bar-master></app-top-bar-master>
-<router-outlet></router-outlet>
+<section class="section">
+    <app-side-bar-master></app-side-bar-master>
+    <router-outlet></router-outlet>
+</section>
