add response user to dashboard

--- a/src/app/pages/master-dash/components/side-bar-master/side-bar-master.component.html
+++ b/src/app/pages/master-dash/components/side-bar-master/side-bar-master.component.html
@@ -1,6 +1,6 @@
 <nav class="side-bar-master">
     <div class="profile">
-        <h4>usuario</h4>
+        <h4>{{ username }}</h4>
     </div>
     <div class="items">
         <a class="item" routerLink="user">Conta</a>
