--- a/src/app/pages/master-dash/components/top-bar-master/top-bar-master.component.html
+++ b/src/app/pages/master-dash/components/top-bar-master/top-bar-master.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar">
     <li name="title">
-        <a class="navbar-item" routerLink="/">Dashboard</a>
+        <a class="navbar-item" (click)="evt.emit('home')">Dashboard</a>
     </li>
     <div class="navbar-right">
         <li><a class="navbar-item" (click)="logout()" >Logout</a></li>
