--- a/src/app/pages/master-dash/master-dash.component.css
+++ b/src/app/pages/master-dash/master-dash.component.css
@@ -4,7 +4,8 @@
 }
 
 .container {
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
     width: 100%;
-    height: 100%;
-    padding: 10px;
+    margin: 10px;
+    padding: 20px;
 }
