--- a/src/styles.css
+++ b/src/styles.css
@@ -24,3 +24,5 @@ button {
 li {
     list-style: none;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
