sending changes of new feature to getposts of backend

--- a/src/app/pages/master-dash/master-dash.component.html
+++ b/src/app/pages/master-dash/master-dash.component.html
@@ -1,5 +1,5 @@
 <header class="header">
-    <app-top-bar-master (onSelect)="selectPage = $event" ></app-top-bar-master>
+    <app-top-bar-master  [role]="user.role" (onSelect)="selectPage = $event" ></app-top-bar-master>
 </header>
 <section class="section">
     <app-side-bar-master [name]="user.name" [role]="user.role" (onSelect)="selectPage = $event" ></app-side-bar-master>
