--- a/src/app/pages/master-dash/components/top-bar-master/top-bar-master.component.html
+++ b/src/app/pages/master-dash/components/top-bar-master/top-bar-master.component.html
@@ -3,6 +3,7 @@
         <a class="navbar-item" (click)="evt.emit('home')">Dashboard</a>
     </li>
     <div class="navbar-right">
+        <li><a class="navbar-item" *ngIf="role == 'admin'" (click)="evt.emit('admin')" >Admin</a></li>
         <li><a class="navbar-item" (click)="logout()" >Logout</a></li>
     </div>
 </nav>
