--- a/src/app/pages/master-dash/pages/index-master/index-master.component.html
+++ b/src/app/pages/master-dash/pages/index-master/index-master.component.html
@@ -1,2 +1,16 @@
-<h1>Home Page</h1>
-<p>Writing...</p>
+<h1>Página principal</h1>
+<br>
+<form class="form">
+    <div class="field">
+        <label for="title">Titulo</label>
+        <input name="title" id="title" type="text"/>
+    </div>
+    <div class="field">
+        <label for="description">Descrição</label>
+        <textarea name="description" id="description" cols="20" rows="5"></textarea>
+    </div>
+    <button type="submit">Postar</button>
+</form>
+<section class="section">   
+    <app-post *ngFor="let post of posts" [id]="post.id" [title]="post.title" [description]="post.description" [user]="post.user"></app-post>
+</section>
