--- a/src/app/pages/master-dash/pages/index-master/post/post.component.html
+++ b/src/app/pages/master-dash/pages/index-master/post/post.component.html
@@ -1,10 +1,9 @@
 <div class="post-item">
     <div class="top">
         <div class="profile-details">
-            <img width="60px" height="60px" [src]="user.image.link">
+            <img width="60px" height="60px" [src]="'https://localhost:5001/upload/img_avatar.png'">
             <p>{{ user.name }}</p>
         </div>
-        <!-- <button class="delete-button" (click)="deletePost()">X</button> -->
     </div>
     <div class="down">
         <p>{{ title }}</p>
